--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "alak",
-  "version": "0.4.0",
+  "version": "0.4.3",
   "description": "Data tresses conception",
   "main": "index.js",
+  "typings": "./index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,5 +12,5 @@
   ],
   "author": "dev@gleb.pw",
   "license": "ISC",
-  "repository":"https://github.com/gleba/alak"
+  "repository":"https:  ]//github.com/gleba/alak"
 }
