--- a/package.json
+++ b/package.json
@@ -12,5 +12,5 @@
   ],
   "author": "dev@gleb.pw",
   "license": "ISC",
-  "repository":"https:  ]//github.com/gleba/alak"
+  "repository":"https://github.com/gleba/alak"
 }
