--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "alak",
-  "version": "0.4.10",
+  "version": "0.4.11",
   "description": "Data tresses conception",
-  "main": "index.js",
-  "typings": "index.d.ts",
+  "main": "alak.js",
+  "typings": "ialak.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
