--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "alak",
-  "version": "0.8.2",
-  "description": "FRP Data Tresses lib (DataFlow)",
+  "version": "0.8.3",
+  "description": "FRP DataChannels/DataFlow/Pattern Matching",
   "main": "dist/index.js",
   "typings": "src/index.d.ts",
   "typescript": {
@@ -15,6 +15,7 @@
     "pattern matching",
     "Functional reactive programming",
     "atomic updates",
+    "channels",
     "streams",
     "dependency-free",
     "dataflow"
@@ -24,13 +25,12 @@
   "repository": "https://github.com/gleba/alak",
   "devDependencies": {
     "@types/node": "^8.5.2",
+    "@types/core-js": "^0.9.43",
     "chokidar": "^1.7.0",
     "cluster": "^0.7.7",
     "tape": "^4.8.0",
     "ts-node": "^3.3.0",
     "typescript": "^2.5.3"
   },
-  "dependencies": {
-    "@types/core-js": "^0.9.43"
-  }
+  "dependencies": {}
 }
